classDiagram
    class Token {
        String jti
        String subject
        UtcDatetime expires_at
        String purpose
        Map extra_data
        store_confirmation_changes(String token, Map extra_data, String purpose)
        get_confirmation_changes(String jti)
        read_expired()
        read()
        expired()
        get_token(String token, String jti, String purpose)
        revoked?(String token, String jti)
        revoke_token(String token, Map extra_data)
        store_token(String token, Map extra_data, String purpose)
        expunge_expired()
        revoke_all_stored_for_subject(String subject, Map extra_data)
    }
    class User {
        UUID id
        CiString email
        confirm(String confirm, CiString email)
        log_out_everywhere(Struct user)
        read()
        create(CiString email)
        get_by_subject(String subject)
        get_by_email(CiString email)
        sign_in_with_magic_link(String token, CiString email)
        request_magic_link(CiString email)
        change_password(String current_password, String password, String password_confirmation)
        sign_in_with_password(CiString email, String password)
        sign_in_with_token(String token)
        register_with_password(CiString email, String password, String password_confirmation)
        request_password_reset_token(CiString email)
        reset_password_with_token(String reset_token, String password, String password_confirmation, CiString email)
        set_current_team(String team, CiString email)
    }
    class Team {
        UUIDv7 id
        String name
        String domain
        String description
        read()
        create(String name, String domain, String description, UUID owner_user_id)
    }
    class UserTeam {
        UUIDv7 id
        destroy()
        update(UUID user_id, UUID team_id)
        read()
        create(UUID user_id, UUID team_id)
    }

    Team -- User
    Team -- UserTeam
    User -- UserTeam
